@@ -37,6 +37,9 @@ metricbeat.modules:
     # Network stats
     - network
 
+    # Processes summary
+    - process_summary
+
     # Per process stats
     - process
 
