@@ -1,0 +1,34 @@
+- name: process.summary
+  title: Process Summary
+  type: group
+  description: >
+    Summary metrics for the processes running on the host.
+  fields:
+    - name: total
+      type: long
+      description: >
+        Total number of processes on this host.
+    - name: running
+      type: long
+      description: >
+        Number of running processes on this host.
+    - name: idle
+      type: long
+      description: >
+        Number of idle processes on this host.
+    - name: sleeping
+      type: long
+      description: >
+        Number of sleeping processes on this host.
+    - name: stopped
+      type: long
+      description: >
+        Number of stopped processes on this host.
+    - name: zombie
+      type: long
+      description: >
+        Number of zombie processes on this host.
+    - name: unknown
+      type: long
+      description: >
+        Number of processes for which the state couldn't be retrieved or is unknown.
