@@ -1,0 +1,5 @@
+/*
+Package process_summary collects high level summary metrics about the running processes.
+It is implemented on darwin, freebsd, linux, and windows.
+*/
+package process_summary
